# data-agent

./: CLAUDE.md  README.md  main.py  pyproject.toml
app/agent/: context.py  graph.py  llm.py  state.py
app/agent/nodes/: add_extra_context.py  context.py  correct_sql.py  execute_sql.py  extract_keywords.py  filter_metric.py  filter_table.py  generate_sql.py  merge_retrieved_info.py  recall_column.py  recall_metric.py  recall_value.py  result_formatter.py  state.py  validate_sql.py
app/api/: dependencies.py
app/api/routers/: query_router.py
app/api/schemas/: query_schema.py
app/clients/: embedding_client_manager.py  es_clinet_manager.py  mysql_client_manager.py  qdrant_client_manager.py
app/conf/: meta_config.py
app/core/: context.py  lifespan.py  log.py
app/models/: column_metric_mysql.py  table_info_mysql.py
app/models/es/: value_info_es.py
app/models/qdrant/: column_info_qdrant.py  metric_info_qdrant.py
app/prompt/: prompt_loader.py
app/repossitories/: dw_mysql_repository.py  meta_mysql_repository.py
app/repossitories/es/: ValueEsRepository.py
app/repossitories/mysql/: dw_mysql_repository.py  meta_mysql_repository.py
app/repossitories/qdrant/: column_qdrant_repository.py  metric_qdrant_repository.py
app/scripts/: build_meta_knowledge.py
app/service/: meta_konwledge_service.py
app/services/: meta_konwledge_service.py  query_service.py
conf/: app_config.py
date-agent-frontend/: package-lock.json  package.json
date-agent-frontend/src/: App.vue  main.js
prompts/: correct_sql.prompt  generate_sql.prompt  prompt_templates.prompt
